# 2d_pose_estimation

./: .gitignore  .main.cpp.swp  CMakeLists.txt  README.md  main.cpp  run.sh
bind/: CMakeLists.txt  examp.py  infer.py
bind/cmake/: ThirdParty.cmake
bind/include/pose_estimation/: common.h  euro_filter.h  nanodet.h  pose2d.h  tflite_inference.h
bind/model/: mobilenetv2_224_224_quant_heatmap.tflite
bind/src/: example.cpp  inference.cpp
cmake/: ThirdParty.cmake
data/: dance_out.avi
model/: qat_model_repvgg_ARHand.tflite
pose_estimation/: CMakeLists.txt
pose_estimation/include/pose_estimation/: common.h
pose_estimation/src/: euro_filter.cpp  nanodet.cpp  pose2d.cpp  tflite_inference.cpp
server_deploy/: app.py  gunicorn.conf.py  requirements.txt
server_deploy/model/: nanodetplus_person.tflite
server_deploy/static/: style.css
server_deploy/templates/: index.html
src/: CMakeLists.txt  Filter.cpp  Filter.h  common.h  detection.cpp  detection.h  inference.cpp  inference.h  pose.cpp  pose.h
test/: CMakeLists.txt  main.cpp
